# emutools

./: LICENSE  README.md
ansitpc/: AUTHORS  README  ansitpc.c
cgosub/: README  gosub.c  gosub2.c
csh2perl/: README  tcsh2perl.perl
dm2wp/: README  dm2wp.c  dmproces.c  rawread.c
epl2pdf/: CMakeLists.txt  HOWITWORKS.txt  LICENSE  README  epl2pdf.cc  epl2pdf.h  partlabel.epl2  podofo_barcode.cc  podofo_barcode.h  podofo_hello.cc  test_000.epl2  test_001.epl2  test_002.epl2  test_003.epl2  test_004.epl2  test_005.epl2  test_a.epl2  test_b1.epl2  test_b2.epl2  test_b3.epl2  test_fs.epl2  test_ls.epl2  test_lw.epl2  test_r.epl2  test_x.epl2
epl2pdf/cmake/: FindBarcode.cmake  FindHPDF.cmake  FindPoDoFo.cmake  FindZint.cmake
font/: README  cvtapp.py  cvtrom.py  showrom.py
gcobs/: README  gcobs.mar
ladder/: Makefile  README  ladder.c  ladder.h  lplay.c  lscore.c  lscreens.c  ltime.c
link11/: CMakeLists.txt  INSTALL  Makefile  Makefile.l11  README  README.md  in.c  link.c  link.h  link11.h  link11link.cc  link11main.cc  link11read.cc  link11util.cc  link11write.cc  obint.c  pass2.c  sup.c
link11/test/: README.md  chlt.mac  hello.mac  maketest  putconch.mac
llvm-intro/: README  makefile  truec.c  truel.ll
macro11/: README  macro11.c  object.c
macro11/tests/: RunTests
rno2roff/: CMakeLists.txt  README  rno2roff.cc
rstsbasic/: README  decdat.bas  decom.bas  ktoth.bas  prime.bas  simtap.bas
tl1/: Makefile  README  nidcaptive.c  tl1command.c  tl1error.c  tl1parse.c  tl1parse.h  tl1parser.c  tl1readline.c
unmbasic/: CMakeLists.txt  README  ungwbasic.cc  unmbasic.cc
world/: README  world.perl  world_customer.perl  world_zipcode.perl
